k8s/ingress/ingress_ssl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - 34.29.234.122.sslip.io
    secretName:  34.29.234.122.sslip.io
  rules:
  - host: 34.29.234.122.sslip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-lb
            port:
              number: 80
